# Raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: AccelerationDataStructure.h  AreaLight.h  BVH.h  BoundingBox.h  Box.h  CMakeLists.txt  Camera.h  Cone.h  DataTypes.h  Dieletric.h  Image.h  ImagePlane.h  KDTree.h  Lambertian.h  LightSource.h  Material.cpp  Material.h  Mesh.h  Metal.h  Object.h  OrthographicCamera.h  PerspectiveCamera.h  Plane.h  PointLight.h  Quad.h  Ray.h  Scene.h  Sphere.h  Torus.h  Triangle.h  config.h  main.cpp
